Project

General

Profile

Actions

Bug #4938

closed

rbd: fix an incorrect assertion condition

Added by Alex Elder almost 11 years ago. Updated almost 11 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In rbd_img_obj_parent_read_full_callback() there is an assertion
intended to verify the size of the image request for a full parent
read was the size of the original request's target object. But
assertion was looking at the parent image order rather than the
original one, and these values can differ.

Fix that.

Signed-off-by: Alex Elder <>

Actions #1

Updated by Alex Elder almost 11 years ago

  • Status changed from In Progress to Fix Under Review

The following has been posted for review. It is one of
the patches available in the "review/wip-rbd-cleanup-2"
branch of the ceph-client git repository.

[PATCH 1/5] rbd: fix an incorrect assertion condition

Actions #2

Updated by Alex Elder almost 11 years ago

  • Status changed from Fix Under Review to Resolved

The following has been committed to the ceph-client
"testing-next" branch.

91c6feb rbd: fix an incorrect assertion condition

Actions

Also available in: Atom PDF